--- a/404.md
+++ b/404.md
@@ -5,3 +5,14 @@ title: 404
 ---
 
 <p>Sorry this page does not exist =(</p>
+<p>Here are some pages that you might have been looking for:
+	<ul>
+		<li><a href="/about">About (Bio)</a></li>
+		<li><a href="https://medium.com/@abhinemani">Blog</a></li>
+		<li><a href="/talks">Talks & Presentations</a></li>
+		<li><a href="/press">Press Mentions</a></li>
+	</ul>
+	Still no dice? Drop me a line: abhi.nemani@gmail.com
+</p>
+
+
