--- a/404.md
+++ b/404.md
@@ -11,6 +11,7 @@ title: 404
 		<li><a href="https://medium.com/@abhinemani">Blog</a></li>
 		<li><a href="/talks">Talks & Presentations</a></li>
 		<li><a href="/press">Press Mentions</a></li>
+		<li><a href="/cv">CV</a></li>
 	</ul>
 	Still no dice? Drop me a line: abhi.nemani@gmail.com
 </p>
