--- a/404.md
+++ b/404.md
@@ -4,8 +4,7 @@ permalink: /404.html
 title: 404
 ---
 
-<p>Sorry this page does not exist =(</p>
-<p>Here are some pages that you might have been looking for:
+<p>Sorry this page does not exist... Not to worry, here are some pages that you might have been looking for:
 	<ul>
 		<li><a href="/about">About (Bio)</a></li>
 		<li><a href="https://medium.com/@abhinemani">Blog</a></li>
