--- a/404.md
+++ b/404.md
@@ -12,7 +12,7 @@ title: 404
 		<li><a href="/press">Press Mentions</a></li>
 		<li><a href="/cv">CV</a></li>
 	</ul>
-	Still no dice? Drop me a line: abhi.nemani@gmail.com
+	Still no dice? Drop me a line: <a href="mailto:abhi.nemani@gmail.com">abhi.nemani@gmail.com</a>.
 </p>
 
 
